fix category fold spacing

--- a/packages/consent-manager/components/dialog.module.css
+++ b/packages/consent-manager/components/dialog.module.css
@@ -121,7 +121,7 @@
 }
 
 .categoryFold {
-  margin-top: -24px;
+  margin-top: -16px;
   padding-bottom: 24px;
 }
 
